# AlgorithmsAndDataStructures

./: .gitignore  CMakeLists.txt  README.md
programs/lists/: lists_1.cpp  lists_2.cpp
programs/lists/lists_1/: CMakeLists.txt  lists_1.cpp
programs/lists/lists_2/: CMakeLists.txt  lists_2.cpp
programs/stacks/: infix_to_polish.cpp  stack_2.cpp
programs/stacks/infix_to_polish_notation/: CMakeLists.txt
programs/stacks/stack_1/: CMakeLists.txt  stack_1.cpp
programs/stacks/stack_2/: CMakeLists.txt  stack_2.cpp
programs/stacks/stack_3/: CMakeLists.txt  stack_3.cpp
structures/: Node.h
structures/helpers/: ExpressionAnalyzer.cpp  ExpressionAnalyzer.h  Node.h
structures/lists/: LinkedList.h  ListInterface.h  RecursiveLinkedList.h
structures/stacks/: ArrayStack.h  LinkedStack.h  StackInferface.h
